Display overlapping entries with some remaining bugs

--- a/frontend/src/components/EntryTimeScaleBar.css
+++ b/frontend/src/components/EntryTimeScaleBar.css
@@ -9,10 +9,12 @@
     display: inline-block;
     float: left;
 
-    width: 20%;
+    width: 10%;
 
 
     margin: 0 1.5% 0 1.5%;
-    border: 2pt solid #82A3A1;
+    border: 1pt solid #82A3A1;
+
+    box-shadow: 5px 5px 10px #282c34;
 
 }
